fix spacing margin

--- a/owlcarousel/owl.carousel.css
+++ b/owlcarousel/owl.carousel.css
@@ -12,8 +12,9 @@
   -webkit-tap-highlight-color: transparent;
   /* position relative and z-index fix webkit rendering fonts issue */
   position: relative;
-  z-index: 1; 
-  margin-bottom: -70px;}
+  z-index: 1;
+  margin-bottom: -70px; 
+  }
   .owl-carousel .owl-stage {
     position: relative;
     -ms-touch-action: pan-Y;
